refactor: Update app.yaml and Dockerfile for improved build process and environment configuration

--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,6 @@ services:
       repo: bnarasimha21/product-launch-assistant
       branch: main
     dockerfile_path: /backend/Dockerfile
-    build_command: ""
-    run_command: python main.py
-    environment_slug: python
     instance_count: 1
     instance_size_slug: basic-xxs
     http_port: 8000
@@ -40,14 +37,14 @@ services:
       repo: bnarasimha21/product-launch-assistant
       branch: main
     dockerfile_path: /frontend/Dockerfile
-    build_command: npm run build
-    run_command: serve -s build -l 3000
-    environment_slug: node-js
     instance_count: 1
     instance_size_slug: basic-xxs
     http_port: 3000
     routes:
       - path: /
-    envs:
+    build_args:
       - key: REACT_APP_API_URL
-        value: ${api.PUBLIC_URL} 
+        value: ${api.PUBLIC_URL}
+    envs:
+      - key: NODE_ENV
+        value: production 
