trying out a fix

--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -5,6 +5,7 @@ spec:
   - name: frontend
     git:
       branch: test
+      deploy_on_push: true
       repo_clone_url: https://github.com/fumblehool/product-launch-assistant.git
     source_dir: frontend
     dockerfile_path: frontend/Dockerfile
@@ -19,9 +20,11 @@ spec:
   - name: backend
     git:
       branch: test
+      deploy_on_push: true
       repo_clone_url: https://github.com/fumblehool/product-launch-assistant.git
     source_dir: backend
     dockerfile_path: backend/Dockerfile
     http_port: 8000
+    internal_ports: [8000]
     routes:
     - path: /backend
