--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -14,7 +14,7 @@ spec:
     envs:
     - key: REACT_APP_API_URL
       scope: RUN_AND_BUILD_TIME
-      value: http://backend:8000
+      value: ${APP_URL}/api
 
   - name: backend
     git:
@@ -22,4 +22,6 @@ spec:
       repo_clone_url: https://github.com/fumblehool/product-launch-assistant.git
     source_dir: backend
     dockerfile_path: backend/Dockerfile
-    internal_ports: [8000]
+    http_port: 8000
+    routes:
+    - path: /api
